# AndroidUsbAudioDevice

./: .gitignore  README.md
AndroidUsbAudioSource/: CMakeLists.txt
AndroidUsbAudioSource/src/: CMakeLists.txt  adk.cpp  adk.hpp  android_usb_audio_source.cpp
UsbAudioSink/: build.gradle  settings.gradle
UsbAudioSink/app/: CMakeLists.txt  build.gradle
UsbAudioSink/app/src/main/: AndroidManifest.xml
UsbAudioSink/app/src/main/cpp/: sample_conversion.cpp
UsbAudioSink/app/src/main/java/io/github/breadfish64/usbaudiosink/: LaunchServiceActivity.kt  Log.kt  MainService.kt  SampleConversion.kt  UsbAudioSink.kt
UsbAudioSink/app/src/main/res/layout/: launch_service_activity.xml
UsbAudioSink/app/src/main/res/values/: strings.xml  themes.xml
UsbAudioSink/app/src/main/res/values-night/: themes.xml
UsbAudioSink/app/src/main/res/xml/: accessory_filter.xml
UsbAudioSink/gradle/wrapper/: gradle-wrapper.properties
